--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -2,10 +2,28 @@ body {
   font-family: "Helvetica Neue", sans-serif;
 }
 
+a {
+  color: #336ab7;
+  text-decoration: none;
+}
+
 .usernameInput {
   margin-bottom: 4px;
 }
 
+.usernameInputInput {
+  padding: 6px 12px;
+  font-size: 1em;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
 .usernameInputButton {
-  margin-left: 3px;
+  margin: 0 0 0 3px;
+  font-size: 1em;
+  padding: 6px 12px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  color: #333;
 }
