--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -7,6 +7,11 @@ a {
   text-decoration: none;
 }
 
+.main {
+  display: flex;
+  flex-direction: row;
+}
+
 .usernameInput {
   margin-bottom: 4px;
 }
